@@ -2,8 +2,8 @@
 
 ALTER TABLE /*_*/wb_items_per_site
 ADD ips_row_id
-INTEGER PRIMARY KEY auto_increment FIRST;
+BIGINT PRIMARY KEY auto_increment FIRST;
 
 ALTER TABLE /*_*/wb_terms
 ADD COLUMN term_row_id
-INTEGER PRIMARY KEY auto_increment FIRST;
+BIGINT PRIMARY KEY auto_increment FIRST;
